src/components/Layout/ImageFooter/Content/Content.css
.footer-content {
    display: flex;
    justify-content: space-around;
    padding: 16rem 0;
}

.footer-text {
    color: goldenrod;
}

.footer__link {
    text-decoration: none;
    border: 0.1rem solid goldenrod;
    border-radius: 0.3rem;
    padding: 1rem 3rem;
    color: white;
    font-weight: bold;
}

.footer__link:hover,
.footer__link:active {
    color: white;
    background: goldenrod;
}

@media (max-width: 75rem) {
    .footer-content {
        align-items: center;
        padding: 8rem 0;
    }

    .footer__link {
        text-decoration: none;
        border: 0.1rem solid goldenrod;
        border-radius: 0.3rem;
        padding: 1rem 2rem;
        color: white;
        font-weight: bold;
    }
}

@media (max-width: 50rem) {
    .footer-content {
        flex-direction: column;
        align-items: center;
        padding: 4rem 0;
    }

    .footer__text {
        display: none;
    }

    .footer__link {
        padding: 1rem 3rem;
    }
}

